--- a/app/templates/admin/payment.html
+++ b/app/templates/admin/payment.html
@@ -1,6 +1,84 @@
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<script src="{{ url_for('static', filename='js/payment.js') }}"></script>
 {% extends '/admin/master.html' %}
 
 {% block body %}
+<h1 class="text-center text-danger mt-1">Xác nhận thanh toán đơn hàng!!!</h1>
+
+<div class="alert alert-info display-none" id="alert">
+    <p id="alert-error"></p>
+</div>
+
+<div class="m-3">
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Nhập vào mã Thuê phòng hoặc tên khách Hàng</label>
+            <input type="text" class="form-control" id="inputname" aria-describedby="emailHelp" placeholder="Mã thuê phòng hoặc tên khách sạn..." required>
+        </div>
+        <button type="button" onclick="searchRental()" class="btn btn-info">Tìm Kiếm</button>
+    </form>
+</div>
+
+<div id="receipt-payment">
+    {% if payment_confirm %}
+        {% for key, payment in payment_confirm.items() %}
+        <div class="border-booking p-3">
+            <div>
+                <h3 class="text-danger text-center">Hóa đơn thanh toán</h3>
+            </div>
+            <div>
+                <div>
+                    <h5>Phiếu Thuê Phòng ID: {{ payment.rental_id }}</h5>
+                    <p>Tổng tiền: {{ "{:,.0f}".format(payment.total_amount) }} VND</p>
+                    <p>Ngày tạo: {{ payment.created_date.strftime('%d-%m-%Y %H:%M:%S') }}</p>
+                </div>
+            </div>
+            <div>
+                <table class="table">
+                    <tr>
+                        <th>Mã</th>
+                        <th>Tên khách hàng</th>
+                        <th>Tên phòng</th>
+                        <th>Ngày nhận phòng</th>
+                        <th>Ngày trả phòng</th>
+                        <th>Số tiền</th>
+                    </tr>
+                    {% for detail in payment.details %}
+                    <tr>
+                        <td>{{ detail.room_id }}</td>
+                        <td>{{ detail.customer_name }}</td>
+                        <td>{{ detail.room_name }}</td>
+                        <td>{{ detail.check_in_date.strftime('%d-%m-%Y') }}</td>
+                        <td>{{ detail.check_out_date.strftime('%d-%m-%Y') }}</td>
+                        <td>{{ "{:,.0f}".format(detail.amount) }} VND</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="d-flex align-items-center">
+                    <div><h4>Tổng Tiền: </h4></div>
+                    <div><h4 class="text-danger mb-1 p-2">{{ "{:,.0f}".format(payment.total_amount) }} VND</h4></div>
+                </div>
+                <div>
+                    <input type="button" class="btn btn-danger" value="Xác nhận thanh toán"/>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    {% else %}
+        <div class="alert alert-info">
+            <p>Không có phiếu thuê nào !!!</p>
+        </div>
+    {% endif %}
+</div>
+
 
 
 {% endblock %}
