--- a/app/templates/admin/revenueStats.html
+++ b/app/templates/admin/revenueStats.html
@@ -19,7 +19,7 @@
       <div class="row">
             <div class="report-title">BÁO CÁO DOANH THU THEO THÁNG</div>
             <div class="col-md-6 col-12">
-                  <table class="table">
+                  <table class="table report-table">
                         <p class="text-center">Tháng: </p>
                         <thead>
                               <tr>
@@ -61,5 +61,5 @@
 <script
       src="{{ url_for('static', filename='js/loadRevenueStats.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
- 
+<script src="{{ url_for('static', filename='js/exportRevenue.js') }}"></script>
 {% endblock %}
