--- a/app/templates/admin/revenueStats.html
+++ b/app/templates/admin/revenueStats.html
@@ -50,7 +50,7 @@
             <div></div>
             <div class="format-button">
                   <button type="button" class="btn btn-danger"><a href="{{ url_for('admin.index') }}">Trở lại</a></button>
-                  <button type="button" class="btn btn-success" id="export-btn"><a href="#">Xuất báo cáo</a></button>
+                  <button type="button" class="btn btn-success revenue" id="export-btn"><a href="#">Xuất báo cáo</a></button>
             </div>
       </div>
 
