--- a/app/templates/admin/revenueStats.html
+++ b/app/templates/admin/revenueStats.html
@@ -10,6 +10,7 @@
 
 {% block body %}
 <div class="container">
+      <h3 class="report-title text-center text-danger">BÁO CÁO DOANH THU THEO THÁNG</h3>
       <div class="d-flex m-5 justify-content-center">
             <h3 class="me-2"> Chọn thời gian: </h3>
             <input class="calendar" type="month" id="monthPicker"
@@ -17,7 +18,6 @@
       </div>
 
       <div class="row">
-            <div class="report-title">BÁO CÁO DOANH THU THEO THÁNG</div>
             <div class="col-md-6 col-12">
                   <table class="table report-table">
                         <p class="text-center">Tháng: </p>
