--- a/app/static/css/frequency.css
+++ b/app/static/css/frequency.css
@@ -13,3 +13,8 @@
 .format-button button a:hover{
       text-decoration: none;
 }
+
+.report-table{
+      border: 1px solid black;
+      border-radius: 5px;
+}
