--- a/app/templates/admin/frequencyStats.html
+++ b/app/templates/admin/frequencyStats.html
@@ -20,7 +20,7 @@
             
             <div class="row">
                   
-                  <div class="format-chart">
+                  <div class="format-chart mb-5">
                         <canvas id="myChart"></canvas>
                   </div>
                   <div class="row">
