--- a/app/templates/admin/payment.html
+++ b/app/templates/admin/payment.html
@@ -28,7 +28,7 @@
 <div id="receipt-payment">
     {% if payment_confirm %}
         {% for key, payment in payment_confirm.items() %}
-        <div class="border-booking p-3">
+        <div class="border-booking p-3 mt-2">
             <div>
                 <h3 class="text-danger text-center">Hóa đơn thanh toán</h3>
             </div>
@@ -67,7 +67,7 @@
                     <div><h4 class="text-danger mb-1 p-2">{{ "{:,.0f}".format(payment.total_amount) }} VND</h4></div>
                 </div>
                 <div>
-                    <input type="button" class="btn btn-danger" value="Xác nhận thanh toán"/>
+                    <input type="button" onclick="payment('{{ payment.customer_id }}','{{ payment.rental_id }}','{{ payment.total_amount }}')" class="btn btn-danger" value="Xác nhận thanh toán"/>
                 </div>
             </div>
         </div>
