--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -434,3 +434,16 @@ body {
       border-right: none;
 }
 
+.card-custom {
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.icon-wrapper {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+}
