--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -5,20 +5,21 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
-      
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 <link rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous">
-<script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
+<!-- <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script> -->
+<script src="{{ url_for('static', filename='js/overview.js') }}"></script>
 <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 {% extends '/admin/master.html' %}
 
 {% block body %}
 {% if current_user.is_authenticated %}
 <h1>WELCOM {{ current_user.name }} TO ADMINISTRAYTION WEBSITE!!!</h1>
-<h3 class="text-center text-danger">Thông tin tổng quan</h3>
 <div class="container">
       <div class="row">
             <div class="col-md-5 Overview">
@@ -31,7 +32,7 @@
                                           <h2 class="fw-bold">0</h2>
                                     </div>
                                     <div class="icon-wrapper bg-primary text-white">
-                                          <i class="bi bi-house"></i>
+                                          <i class="bi bi-house-add-fill fs-4"></i>
                                     </div>
                               </div>
                               </div>
@@ -45,7 +46,7 @@
                                           <h2 class="fw-bold">0</h2>
                                     </div>
                                     <div class="icon-wrapper bg-success text-white">
-                                          <i class="bi bi-building"></i>
+                                          <i class="bi bi-building fs-4"></i>
                                     </div>
                               </div>
                               </div>
@@ -59,7 +60,7 @@
                                           <h2 class="fw-bold">0</h2>
                                     </div>
                                     <div class="icon-wrapper bg-info text-white">
-                                          <i class="bi bi-people"></i>
+                                          <i class="bi bi-people fs-4"></i>
                                     </div>
                               </div>
                               </div>
@@ -73,7 +74,7 @@
                                           <h2 class="fw-bold">0</h2>
                                     </div>
                                     <div class="icon-wrapper bg-warning text-white">
-                                          <i class="bi bi-calendar-event"></i>
+                                          <i class="bi bi-calendar-event fs-4"></i>
                                     </div>
                               </div>
                               </div>
@@ -87,7 +88,7 @@
                                           <h2 class="fw-bold">0 đ</h2>
                                     </div>
                                     <div class="icon-wrapper bg-danger text-white">
-                                          <i class="bi bi-currency-dollar"></i>
+                                          <i class="bi bi-currency-dollar fs-4"></i>
                                     </div>
                               </div>
                               </div>
@@ -97,26 +98,6 @@
 
       </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 {% else %}
 <h1 class="text-center text-danger">Dang nhap trang ADMIN</h1>
