--- a/app/templates/admin/RentalRoom.html
+++ b/app/templates/admin/RentalRoom.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="d-flex mt-5">
                     <div><h4>Giá Phòng:</h4> </div>
-                    <div><h4  id="room-price" class="text-danger ms-3">112345667 VND</h4></div>
+                    <div><h4  id="room-price" class="text-danger ms-3">0 VND</h4></div>
                 </div>
             </div>
         </div>
